syntax = "proto3";

package sonrhq.common.crypto;

option go_package = "github.com/sonrhq/sonr/common/crypto";

// CoinType is the BIP-0044 coin type for each supported coin.
enum CoinType {
  // Bitcoins coin type is 0
  CoinType_UNSPECIFIED = 0;

  // Testnet coin type is 1
  CoinType_ATOM = 1;

  // Litecoin coin type is 2
  CoinType_AXELAR = 2;

  // Dogecoin coin type is 3
  CoinType_BITCOIN = 3;

  // Ethereum coin type is 60
  CoinType_ETHEREUM = 4;

  // Sonr coin type is 703
  CoinType_EVMOS = 5;

  // Cosmos coin type is 118
  CoinType_FILECOIN = 6;

  // Filecoin coin type is 461
  CoinType_JUNO = 7;

  // Handshake coin type is 5353
  CoinType_OSMO = 8;

  // Solana coin type is 501
  CoinType_SOLANA = 9;

  // Ripple coin type is 144
  CoinType_SONR = 10;

  // Stargaze coin type is 1001
  CoinType_STARGAZE = 11;
}

// AccountData is the data needed to create an account.
message AccountData {
  string address = 1;
  string algo = 2;
  bytes public_key = 3;
}
